--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,7 +1,11 @@
 * {
-  padding: 0;
+  box-sizing: border-box;
   margin: 0;
-  /* box-sizing: border-box; */
+  padding: 0;
+}
+
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .top {
@@ -10,17 +14,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(236, 236, 238);
-  overflow: hidden;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #f2f2f2;
 }
 
 .container {
   background-color: white;
-  padding: 1rem 3rem;
-  padding-bottom: 2rem;
+  padding: 2rem;
   border-radius: 0.5rem;
-  border-top: rgb(224, 31, 5) 0.5rem solid;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .h2 {
@@ -30,19 +31,19 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 1.4rem;
+  gap: 1rem;
 }
 
 .form div {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.5rem;
 }
 
 .input {
   padding: 0.5rem;
   border-radius: 0.3rem;
-  border: 1px solid gray;
+  border: 1px solid #ccc;
   font-size: 1.1rem;
 }
 
@@ -55,6 +56,10 @@
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 0.3rem;
+}
+
+.button:hover {
+  background-color: rgb(60, 78, 235);
 }
 
 .span a {
@@ -78,7 +83,11 @@
 
 .private button {
   background-color: black;
-  padding: 2rem 10rem;
-  font-size: 4rem;
+  padding: 2rem 6rem;
+  font-size: 3rem;
   border-radius: 2rem;
+}
+
+.private button:hover {
+  background-color: #333;
 }
